--- a/entity/data/variations/variations-hi.yaml
+++ b/entity/data/variations/variations-hi.yaml
@@ -455,7 +455,9 @@ bank_name:
   - हिंमतनगर नागारिक सहाकारी बैंक लिमिटेड
   - हिम्मतनगर नागरिक सहकारी बैंक लिमिटेड
   - हिम्मतनगर नागरिक सहकारी बैंक
-  Hutatma Co Op Bank Ltd: []
+  Hutatma Co Op Bank Ltd:
+  - हुतात्मा को ऑप बैंक लिमिटेड
+  - हुतात्मा को ऑप बैंक
   ICICI Bank:
   - आईसीआईसीआई बैंक
   - आईसीआईसीआई
@@ -518,6 +520,7 @@ bank_name:
   - इंडसइण्ड
   Irinjalakuda Town Co-Operative Bank Ltd:
   - इरिंजालाकुडा टॉन कोऑपरेटिव बैंक लिमिटेड
+  - इरिंजालाकुडा टॉन कोऑपरेटिव बैंक
   J & K Grameen Bank:
   - जे एन्ड के ग्रामीण बैंक
   - जम्मू कश्मीर ग्रामीण बैंक
@@ -579,9 +582,11 @@ bank_name:
   Jivan Commercial Co-operative Bank Ltd:
   - जीवन कॉमर्शियल कोऑपरेटिव बैंक लिमिटेड
   - जिवन कॉमर्शियल कोऑपरेटिव बैंक लिमिटेड
+  - जिवन कॉमर्शियल कोऑपरेटिव बैंक
   Jodhpur Nagrik Sahakari Bank Limited:
   - जोधापुर नाग्रिक सहाकारी बैंक लिमिटेड
   - जोधपुर नागरिक सहकारी बैंक लिमिटेड
+  - जोधपुर नागरिक सहकारी बैंक
   Kallapanna Arwade Ichalkaranji Janata sahakari Bank:
   - कल्लापन्न अरवाडे इचलकरनजी जनाता सहाकारी बैंक
   Kalupur Commercial Bank:
@@ -618,8 +623,10 @@ bank_name:
   - केरला ग्रामीण बैंक
   Kokan Merchantile Co-operative Bank Ltd:
   - कोकण मर्चेन्टाइल कोऑपरेटिव बैंक लिमिटेड
+  - कोकण मर्चेन्टाइल कोऑपरेटिव बैंक
   Kolhapur District Central Co-operative Bank Limited:
   - कोल्हापूर डिस्ट्रीक्ट सेन्ट्रल कोऑपरेटिव बैंक लिमिटेड
+  - कोल्हापूर डिस्ट्रीक्ट सेन्ट्रल कोऑपरेटिव बैंक
   Kolhapur Mahila Sahakari Bank Ltd:
   - कोल्हापूर माहिला सहाकारी बैंक लिमिटेड
   - कोल्हापूर महिला सहकारी बैंक लिमिटेड
@@ -739,8 +746,10 @@ bank_name:
   Navsarjan Industrial Co-Op Bank Ltd:
   - नवसरजन इंडस्ट्रीयल को ऑप बैंक लिमिटेड
   - नवसरजन इंडस्ट्रीयल को ऑप बैंक लिमिटेड
+  - नवसरजन इंडस्ट्रीयल को ऑप बैंक
   North East Small Finance Bank Limited:
   - नार्थ इस्ट स्माल फाइनैंस बैंक लिमिटेड
+  - नार्थ इस्ट स्माल फाइनैंस बैंक
   Nutan NagrikSahakari Bank:
   - नुतान नागरीकसहकारी बैंक
   - नूतन नागरिक सहकारी बैंक
@@ -776,6 +785,7 @@ bank_name:
   - पेटीएम पेमेंट बैंक
   Peoples Urban Co-operative Bank Ltd:
   - पीपल्स अर्बन कोऑपरेटिव बैंक लिमिटेड
+  - पीपल्स अर्बन कोऑपरेटिव बैंक
   Pockets by ICICI Bank:
   - पॉकेट्स बाय आई सी आई सी आई बैंक
   - पॉकेट्स
@@ -791,13 +801,17 @@ bank_name:
   - प्रथमा बैंक
   Prime Co-operative Bank Ltd.:
   - प्राईम कोऑपरेटिव बैंक लिमिटेड
+  - प्राईम कोऑपरेटिव बैंक
   Priyadarshini Nagari Sahakari Bank Ltd Jalna:
   - प्रियदर्शनी नगरी सहकारी बैंक लिमिटेड जालना
   - प्रियदर्शनी नागरी सहाकारी बैंक लिमिटेड जालना
+  - प्रियदर्शनी नागरी सहाकारी बैंक
   Pune Cantonment Sahakari Bank Ltd:
   - पुने कैन्टोनमेंट सहाकारी बैंक लिमिटेड
+  - पुने कैन्टोनमेंट सहाकारी बैंक
   Pune Urban Co-operative Bank Ltd:
   - पुने अर्बन कोऑपरेटिव बैंक लिमिटेड
+  - पुने अर्बन कोऑपरेटिव बैंक
   Punjab & Sind Bank:
   - पंजाब एन्ड सिंध बैंक
   - पंजाब एंड सिंध बैंक
@@ -816,6 +830,7 @@ bank_name:
   Rajarambapu Sahakari Bank Ltd:
   - राजारामबापू सहकारी बैंक लिमिटेड
   - राजरामबापू सहाकारी बैंक लिमिटेड
+  - राजरामबापू सहाकारी बैंक
   Rajarshi Shahu Sahakari Bank Limited:
   - राजर्षी शाहु सहकारी बैंक लिमिटेड
   - राजर्षी शाहु सहाकारी बैंक लिमिटेड
@@ -833,12 +848,14 @@ bank_name:
   Rajkot Peoples Cooperative Bank Ltd:
   - राजकोट पीपल्स कोऑपरेटिव बैंक लिमिटेड
   - रजकोट पीपल्स कोऑपरेटिव बैंक लिमिटेड
+  - रजकोट पीपल्स कोऑपरेटिव बैंक
   Rani Channamma Mahila Sahakari Bank Belagavi:
   - रानी चन्नामा महिला सहकारी बैंक बेलागावी
   - राणी चन्नामा माहिला सहाकारी बैंक बेलागावी
   SAMATA SAHAKARI BANK LTD:
   - समाता सहाकारी बैंक लिमिटेड
   - समता सहकारी बैंक लिमिटेड
+  - समता सहकारी बैंक
   SBM Bank:
   - एस बी एम बैंक
   - स्टेट बैंक औफ मॉरिशस 
@@ -862,8 +879,10 @@ bank_name:
   Samarth Sahakari Bank Limited:
   - सामर्थ सहाकारी बैंक लिमिटेड
   - समर्थ सहकारी बैंक लिमिटेड
+  - समर्थ सहकारी बैंक
   Samruddhi Co-operative Bank Ltd:
   - समरुद्धि कोऑपरेटिव बैंक लिमिटेड
+  - समरुद्धि कोऑपरेटिव बैंक
   Sandur Pattana Souharda Sahakari Bank:
   - संदुर पटाना सौहार्द सहकारी बैंक
   - संदुर पटाना सौहार्दा सहाकारी बैंक
@@ -1554,8 +1573,8 @@ bank_name:
   - श्री यशवंत सहकारी बैंक मर्यादित कुडित्रे
   - श्री यशवंत सहकारी बैंक
   Shri  D. T. Patil Co-opertive Bank Ltd, Chikodi:
-  - श्री  डी. टी. पाटिल सीओ-ऑपरटिव बैंक लिमिटेड चिकोडी
-  - श्री  डी. टी. पाटिल सीओ-ऑपरटिव बैंक
+  - श्री डी. टी. पाटिल सीओ-ऑपरटिव बैंक लिमिटेड चिकोडी
+  - श्री डी. टी. पाटिल सीओ-ऑपरटिव बैंक
   Sri Gokarnanath Co-Operative Bank Ltd:
   - श्री गोकर्णनाथ सीओ-ऑपरेटिव बैंक लिमिटेड
   - श्री गोकर्णनाथ सीओ-ऑपरेटिव बैंक
@@ -1565,123 +1584,123 @@ bank_name:
   Sulthan Bathery Co-operative Urban Bank:
   - सुलतान बाथरी सीओ-ऑपरेटिव अर्बन बैंक
   THE AMRAVATI ZILLA PARISHAD SHIKSHAK SAHAKARI BANK:
-  - थे अमरावती जिल्ला परिषद शिक्षक सहकारी बैंक
+  - द अमरावती जिल्ला परिषद शिक्षक सहकारी बैंक
   THE BURDWAN CENTRAL COOPERATIVE BANK LTD:
-  - थे बर्दवान सेंट्रल कोआपरेटिव बैंक लिमिटेड
-  - थे बर्दवान सेंट्रल कोआपरेटिव बैंक
+  - द बर्दवान सेंट्रल कोआपरेटिव बैंक लिमिटेड
+  - द बर्दवान सेंट्रल कोआपरेटिव बैंक
   THE CHIPLUN URBAN COOPERATIVE BANK LTD:
-  - थे चिपलून अर्बन कोआपरेटिव बैंक लिमिटेड
-  - थे चिपलून अर्बन कोआपरेटिव बैंक
+  - द चिपलून अर्बन कोआपरेटिव बैंक लिमिटेड
+  - द चिपलून अर्बन कोआपरेटिव बैंक
   THE JANATA CO-OPERATIVE BANK LTD. DELHI:
-  - थे जनता सीओ-ऑपरेटिव बैंक लिमिटेड डेल्ही
-  - थे जनता सीओ-ऑपरेटिव बैंक
+  - द जनता सीओ-ऑपरेटिव बैंक लिमिटेड डेल्ही
+  - द जनता सीओ-ऑपरेटिव बैंक
   THE KANGRA CENTRAL CO-OPERATIVE BANK LTD:
-  - थे कांगरा सेंट्रल सीओ-ऑपरेटिव बैंक लिमिटेड
-  - थे कांगरा सेंट्रल सीओ-ऑपरेटिव बैंक
+  - द कांगरा सेंट्रल सीओ-ऑपरेटिव बैंक लिमिटेड
+  - द कांगरा सेंट्रल सीओ-ऑपरेटिव बैंक
   THE NASIKROAD DEOLALI VYAPARI SAHAKARI BANK LTD.:
-  - थे नासिकरोड देवलाली व्यापारी सहकारी बैंक लिमिटेड
-  - थे नासिकरोड देवलाली व्यापारी सहकारी बैंक
+  - द नासिकरोड देवलाली व्यापारी सहकारी बैंक लिमिटेड
+  - द नासिकरोड देवलाली व्यापारी सहकारी बैंक
   THE RAIGAD DISTRICT CO OPERATIVE BANK LTD ALIBAG:
-  - थे रायगढ़ डिस्ट्रिक्ट सीओ ऑपरेटिव बैंक लिमिटेड अलीबाग
-  - थे रायगढ़ डिस्ट्रिक्ट सीओ ऑपरेटिव बैंक
+  - द रायगढ़ डिस्ट्रिक्ट सीओ ऑपरेटिव बैंक लिमिटेड अलीबाग
+  - द रायगढ़ डिस्ट्रिक्ट सीओ ऑपरेटिव बैंक
   Tamil Nadu Grama Bank:
   - तमिल नाडु ग्रामा बैंक
   The Adarsh Urban Co-op. Bank Ltd., Hyderabad:
-  - थे आदर्श अर्बन सीओ-ओप बैंक लिमिटेड हैदराबाद
-  - थे आदर्श अर्बन सीओ-ओप बैंक
+  - द आदर्श अर्बन सीओ-ओप बैंक लिमिटेड हैदराबाद
+  - द आदर्श अर्बन सीओ-ओप बैंक
   The Agrasen Nagari Sahakari Bank Ltd, Akola:
-  - थे अग्रसेन नगरी सहकारी बैंक लिमिटेड अकोला
-  - थे अग्रसेन नगरी सहकारी बैंक
+  - द अग्रसेन नगरी सहकारी बैंक लिमिटेड अकोला
+  - द अग्रसेन नगरी सहकारी बैंक
   The Ashta Peoples Co-op Bank Ltd Ashta:
-  - थे अष्ट पीपल्स सीओ-ओप बैंक लिमिटेड अष्ट
-  - थे अष्ट पीपल्स सीओ-ओप बैंक
+  - द अष्ट पीपल्स सीओ-ओप बैंक लिमिटेड अष्ट
+  - द अष्ट पीपल्स सीओ-ओप बैंक
   The Bardoli Nagrik Sahakari Bank Ltd:
-  - थे बारडोली नागरिक सहकारी बैंक लिमिटेड
-  - थे बारडोली नागरिक सहकारी बैंक
+  - द बारडोली नागरिक सहकारी बैंक लिमिटेड
+  - द बारडोली नागरिक सहकारी बैंक
   The Bavla Nagrik Sahakari Bank Ltd.:
-  - थे बावला नागरिक सहकारी बैंक लिमिटेड।
-  - थे बावला नागरिक सहकारी बैंक
+  - द बावला नागरिक सहकारी बैंक लिमिटेड।
+  - द बावला नागरिक सहकारी बैंक
   The Bhagyalakshmi Mahila Sahakari Bank Ltd:
-  - थे भाग्यलक्ष्मी महिला सहकारी बैंक लिमिटेड
-  - थे भाग्यलक्ष्मी महिला सहकारी बैंक
+  - द भाग्यलक्ष्मी महिला सहकारी बैंक लिमिटेड
+  - द भाग्यलक्ष्मी महिला सहकारी बैंक
   The Chandigarh State Co-op Bank Ltd:
-  - थे चंडीगढ़ स्टेट सीओ-ओप बैंक लिमिटेड
-  - थे चंडीगढ़ स्टेट सीओ-ओप बैंक
+  - द चंडीगढ़ स्टेट सीओ-ओप बैंक लिमिटेड
+  - द चंडीगढ़ स्टेट सीओ-ओप बैंक
   The Co-Operative Bank of Rajkot Ltd.:
-  - थे सीओ-ऑपरेटिव बैंक ओएफ राजकोट लिमिटेड
-  - थे सीओ-ऑपरेटिव बैंक
+  - द सीओ-ऑपरेटिव बैंक ओएफ राजकोट लिमिटेड
+  - द सीओ-ऑपरेटिव बैंक
   The Commercial Co-operative Bank Ltd .:
-  - थे कमर्शियल सीओ-ऑपरेटिव बैंक लिमिटेड
-  - थे कमर्शियल सीओ-ऑपरेटिव बैंक
+  - द कमर्शियल सीओ-ऑपरेटिव बैंक लिमिटेड
+  - द कमर्शियल सीओ-ऑपरेटिव बैंक
   The Davanagere Harihar Urban Sahakara Bank Niyamitha:
-  - थे दावणगेरे हरिहर अर्बन सहकारा बैंक नियमित
-  - थे दावणगेरे हरिहर अर्बन सहकारा बैंक
+  - द दावणगेरे हरिहर अर्बन सहकारा बैंक नियमित
+  - द दावणगेरे हरिहर अर्बन सहकारा बैंक
   The Dhanbad Central Co-Operative Bank Ltd.:
-  - थे धनबाद सेंट्रल सीओ-ऑपरेटिव बैंक लिमिटेड
-  - थे धनबाद सेंट्रल सीओ-ऑपरेटिव बैंक
+  - द धनबाद सेंट्रल सीओ-ऑपरेटिव बैंक लिमिटेड
+  - द धनबाद सेंट्रल सीओ-ऑपरेटिव बैंक
   The Erode District Central Co-Operative Bank Ltd:
-  - थे इरोड डिस्ट्रिक्ट सेंट्रल सीओ-ऑपरेटिव बैंक लिमिटेड
-  - थे इरोड डिस्ट्रिक्ट सेंट्रल सीओ-ऑपरेटिव बैंक
+  - द इरोड डिस्ट्रिक्ट सेंट्रल सीओ-ऑपरेटिव बैंक लिमिटेड
+  - द इरोड डिस्ट्रिक्ट सेंट्रल सीओ-ऑपरेटिव बैंक
   The Gandhi Gunj Co-Operative Bank Ltd:
-  - थे गांधी गुंज सीओ-ऑपरेटिव बैंक लिमिटेड
-  - थे गांधी गुंज सीओ-ऑपरेटिव बैंक
+  - द गांधी गुंज सीओ-ऑपरेटिव बैंक लिमिटेड
+  - द गांधी गुंज सीओ-ऑपरेटिव बैंक
   The Gandhinagar Urban Coop Bank Ltd:
-  - थे गांधीनगर अर्बन कूप बैंक लिमिटेड
-  - थे गांधीनगर अर्बन कूप बैंक
+  - द गांधीनगर अर्बन कूप बैंक लिमिटेड
+  - द गांधीनगर अर्बन कूप बैंक
   The Haryana State Co-operative Apex Bank Ltd:
-  - थे हरियाणा स्टेट सीओ-ऑपरेटिव एपेक्स बैंक लिमिटेड
-  - थे हरियाणा स्टेट सीओ-ऑपरेटिव एपेक्स बैंक
+  - द हरियाणा स्टेट सीओ-ऑपरेटिव एपेक्स बैंक लिमिटेड
+  - द हरियाणा स्टेट सीओ-ऑपरेटिव एपेक्स बैंक
   The Kakinada Co-Op Town Bank Ltd:
-  - थे काकीनाडा सीओ-ओप टाउन बैंक लिमिटेड
-  - थे काकीनाडा सीओ-ओप टाउन बैंक
+  - द काकीनाडा सीओ-ओप टाउन बैंक लिमिटेड
+  - द काकीनाडा सीओ-ओप टाउन बैंक
   The Kodagu District Cooperrative Central Bank Ltd:
-  - थे कोडागू डिस्ट्रिक्ट कोआपरेटिव सेंट्रल बैंक लिमिटेड
-  - थे कोडागू डिस्ट्रिक्ट कोआपरेटिव सेंट्रल बैंक
+  - द कोडागू डिस्ट्रिक्ट कोआपरेटिव सेंट्रल बैंक लिमिटेड
+  - द कोडागू डिस्ट्रिक्ट कोआपरेटिव सेंट्रल बैंक
   The Kopargaon Peoples Co Op Bank Ltd:
-  - थे कोपरगांव पीपल्स सीओ ओप बैंक लिमिटेड
-  - थे कोपरगांव पीपल्स सीओ ओप बैंक
+  - द कोपरगांव पीपल्स सीओ ओप बैंक लिमिटेड
+  - द कोपरगांव पीपल्स सीओ ओप बैंक
   The Latur Urban Coop Bank Ltd,Latur:
-  - थे लातूर अर्बन कूप बैंक लिमिटेड लातूर
-  - थे लातूर अर्बन कूप बैंक
+  - द लातूर अर्बन कूप बैंक लिमिटेड लातूर
+  - द लातूर अर्बन कूप बैंक
   The Makarpura Industrial Estate Cooperative Bank Ltd.:
-  - थे मकरपुरा इंडस्ट्रियल एस्टेट कोआपरेटिव बैंक लिमिटेड
-  - थे मकरपुरा इंडस्ट्रियल एस्टेट कोआपरेटिव बैंक
+  - द मकरपुरा इंडस्ट्रियल एस्टेट कोआपरेटिव बैंक लिमिटेड
+  - द मकरपुरा इंडस्ट्रियल एस्टेट कोआपरेटिव बैंक
   The Meghalaya Cooperative Apex Bank Ltd.:
-  - थे मेघालय कोआपरेटिव एपेक्स बैंक लिमिटेड
-  - थे मेघालय कोआपरेटिव एपेक्स बैंक
+  - द मेघालय कोआपरेटिव एपेक्स बैंक लिमिटेड
+  - द मेघालय कोआपरेटिव एपेक्स बैंक
   The Moti Urban Co-operative Bank Ltd, Taloda:
-  - थे मोती अर्बन सीओ-ऑपरेटिव बैंक लिमिटेड तलोदा
-  - थे मोती अर्बन सीओ-ऑपरेटिव बैंक
+  - द मोती अर्बन सीओ-ऑपरेटिव बैंक लिमिटेड तलोदा
+  - द मोती अर्बन सीओ-ऑपरेटिव बैंक
   The Panipat Urban Cooperative Bank LTD:
-  - थे पानीपत अर्बन कोआपरेटिव बैंक लिमिटेड
-  - थे पानीपत अर्बन कोआपरेटिव बैंक
+  - द पानीपत अर्बन कोआपरेटिव बैंक लिमिटेड
+  - द पानीपत अर्बन कोआपरेटिव बैंक
   The Raichur District Central Co-op Bank Ltd Raichur:
-  - थे रायचूर डिस्ट्रिक्ट सेंट्रल सीओ-ओप बैंक लिमिटेड रायचूर
-  - थे रायचूर डिस्ट्रिक्ट सेंट्रल सीओ-ओप बैंक
+  - द रायचूर डिस्ट्रिक्ट सेंट्रल सीओ-ओप बैंक लिमिटेड रायचूर
+  - द रायचूर डिस्ट्रिक्ट सेंट्रल सीओ-ओप बैंक
   The Railway Employees Cooperative Bank Ltd,Jaipur:
-  - थे रेलवे एम्प्लाइज कोआपरेटिव बैंक लिमिटेड जयपुर
-  - थे रेलवे एम्प्लाइज कोआपरेटिव बैंक
+  - द रेलवे एम्प्लाइज कोआपरेटिव बैंक लिमिटेड जयपुर
+  - द रेलवे एम्प्लाइज कोआपरेटिव बैंक
   The Ranuj Nagrik Sahakari Bank Ltd:
-  - थे रनुज नागरिक सहकारी बैंक लिमिटेड
-  - थे रनुज नागरिक सहकारी बैंक
+  - द रनुज नागरिक सहकारी बैंक लिमिटेड
+  - द रनुज नागरिक सहकारी बैंक
   The Sarvodaya Sahakari Bank Ltd., Modasa:
-  - थे सर्वोदय सहकारी बैंक लिमिटेड मोडासा
-  - थे सर्वोदय सहकारी बैंक
+  - द सर्वोदय सहकारी बैंक लिमिटेड मोडासा
+  - द सर्वोदय सहकारी बैंक
   The Shoranur Co Operative Urban Bank Ltd:
-  - थे शोरानूर सीओ ऑपरेटिव अर्बन बैंक लिमिटेड
-  - थे शोरानूर सीओ ऑपरेटिव अर्बन बैंक
+  - द शोरानूर सीओ ऑपरेटिव अर्बन बैंक लिमिटेड
+  - द शोरानूर सीओ ऑपरेटिव अर्बन बैंक
   The Urban Co-Operative Bank Ltd,Perinthalmanna:
-  - थे अर्बन सीओ-ऑपरेटिव बैंक लिमिटेड पेरिंथलमन्ना
-  - थे अर्बन सीओ-ऑपरेटिव बैंक
+  - द अर्बन सीओ-ऑपरेटिव बैंक लिमिटेड पेरिंथलमन्ना
+  - द अर्बन सीओ-ऑपरेटिव बैंक
   The Uttarsanda Peoples Coop Bank Ltd Uttarsanda:
-  - थे उत्तरसंडा पीपल्स कूप बैंक लिमिटेड उत्तरसंडा
-  - थे उत्तरसंडा पीपल्स कूप बैंक
+  - द उत्तरसंडा पीपल्स कूप बैंक लिमिटेड उत्तरसंडा
+  - द उत्तरसंडा पीपल्स कूप बैंक
   The Veraval Mercantile Co-operative Bank Ltd:
-  - थे वेरावल मर्केंटाइल सीओ-ऑपरेटिव बैंक लिमिटेड
-  - थे वेरावल मर्केंटाइल सीओ-ऑपरेटिव बैंक
+  - द वेरावल मर्केंटाइल सीओ-ऑपरेटिव बैंक लिमिटेड
+  - द वेरावल मर्केंटाइल सीओ-ऑपरेटिव बैंक
   The Zoroastrian Co-operative Bank Ltd.:
-  - थे जोरास्ट्रियन सीओ-ऑपरेटिव बैंक लिमिटेड
-  - थे जोरास्ट्रियन सीओ-ऑपरेटिव बैंक
+  - द जोरास्ट्रियन सीओ-ऑपरेटिव बैंक लिमिटेड
+  - द जोरास्ट्रियन सीओ-ऑपरेटिव बैंक
   Tumkur Grain Merchants Co-operative Bank Ltd:
   - तुमकुर ग्रेन मर्चेंट सीओ-ऑपरेटिव बैंक लिमिटेड
   - तुमकुर ग्रेन मर्चेंट सीओ-ऑपरेटिव बैंक
@@ -1753,17 +1772,17 @@ bank_name:
   - सोनभद्र नगर सहकारी बैंक लिमिटेड
   - सोनभद्र नगर सहकारी बैंक
   The Babasaheb Deshmukh Sahakari Bank Ltd , Atpadi:
-  - थे बाबासाहेब देशमुख सहकारी बैंक लिमिटेड अटपड़ी
-  - थे बाबासाहेब देशमुख सहकारी बैंक
+  - द बाबासाहेब देशमुख सहकारी बैंक लिमिटेड अटपड़ी
+  - द बाबासाहेब देशमुख सहकारी बैंक
   The Gandhidham Mercantile Co-operative Bank Ltd:
-  - थे गांधीधाम मर्केंटाइल सीओ-ऑपरेटिव बैंक लिमिटेड
-  - थे गांधीधाम मर्केंटाइल सीओ-ऑपरेटिव बैंक
+  - द गांधीधाम मर्केंटाइल सीओ-ऑपरेटिव बैंक लिमिटेड
+  - द गांधीधाम मर्केंटाइल सीओ-ऑपरेटिव बैंक
   The Umreth Urban Co-Operative Bank Ltd:
-  - थे उमरेठ अर्बन सीओ-ऑपरेटिव बैंक लिमिटेड
-  - थे उमरेठ अर्बन सीओ-ऑपरेटिव बैंक
+  - द उमरेठ अर्बन सीओ-ऑपरेटिव बैंक लिमिटेड
+  - द उमरेठ अर्बन सीओ-ऑपरेटिव बैंक
   The Vaish Co-operative New Bank Ltd:
-  - थे वैश सीओ-ऑपरेटिव न्यू बैंक लिमिटेड
-  - थे वैश सीओ-ऑपरेटिव न्यू बैंक
+  - द वैश सीओ-ऑपरेटिव न्यू बैंक लिमिटेड
+  - द वैश सीओ-ऑपरेटिव न्यू बैंक
   Vyavsayik Bank:
   - व्यावसायिक बैंक
   Wana Nagarik Sahakari Bank Ltd.:
@@ -2053,81 +2072,81 @@ lpg_gas_provider_name:
   - ज्योथी गैस प्राईवेट लिमिटिड
   - ज्योथी गैस
   - ज्योती गैस
-pipe_gas_provider_name:
-  Aavantika Gas Ltd.:
-  - आवन्तिका गैस लिमिटेड
-  Adani Total Gas Limited:
-  - अडानी टोटाल गैस लिमिटेड
-  - अडानी गैस
-  - अडानी टोटाल
-  - अडानी पाइप गैस
-  Assam Gas Company Limited:
-  - असाम गैस कम्पनी लिमिटेड
-  - असाम गैस कंपनी
-  - असाम गैस
-  Bhagyanagar Gas Limited:
-  - भाग्यानगर गैस लिमिटेड
-  Central U.P. Gas Limited:
-  - सेन्ट्रल यू पी गैस लिमिटेड
-  Charotar Gas Sahakari Mandali Ltd:
-  - चारोतार गैस सहाकारी मंडाली लिमिटेड
-  GAIL Gas Limited:
-  - गैल गैस लिमिटेड
-  - गैल
-  GAIL India Limited:
-  - गैल इंदिया लिमिटेड
-  - गैल इंदिया
-  Green Gas Limited(GGL):
-  - ग्रिन गैस लिमिटेड
-  - ग्रिन गैस
-  - जी जी एल
-  Gujarat Gas Limited:
-  - गुजरत गैस लिमिटेड
-  Gujarat State Petronet Limited:
-  - गुजरत स्टेटे पैट्रोनेट लिमिटेड
-  Haryana City Gas - Kapil Chopra Enterprise:
-  - हरयाणा सीटी गैस कापिल चोपड़ा एंटरप्राइज़
-  - हरयाणा सीटी गैस
-  - कापिल चोपड़ा एंटरप्राइज़
-  IRM Energy Private Limited:
-  - आई आर एम इनर्जी प्राईवेट लिमिटेड
-  Indian Oil Corporation Ltd-Piped Gas:
-  - इन्डियन आयल कॉरपोरेशन लिमिटेड पाईप्ड गैस
-  - आइओसीएल
-  - इन्डियन आयल
-  Indian Oil-Adani Gas Private Limited:
-  - इन्डियन आयल अडानी गैस प्राईवेट लिमिटेड
-  Indraprastha Gas:
-  - इन्द्रप्रस्थ गैस
-  - आई जी एल
-  - इन्द्रप्रस्थ गैस
-  Mahanagar Gas Limited:
-  - माहानगर गैस लिमिटेड
-  - माहानगर गैस
-  Maharashtra Natural Gas Limited (MNGL):
-  - महाराष्ट्रा नैचुरल गैस लिमिटेड
-  - एम एन जी एल
-  - महाराष्ट्रा गैस लिमिटेड
-  Megha Gas:
-  - मेघ गैस
-  Naveriya Gas Pvt Ltd:
-  - नावेरिया गैस प्राईवेट लिमिटेड
-  Purba Bharati Gas Pvt Ltd:
-  - पूर्बा भरती गैस प्राईवेट लिमिटेड
-  Rajasthan State Gas Limited:
-  - राजास्थान स्टेटे गैस लिमिटेड
-  Sabarmati Gas Limited (SGL):
-  - सबरमती गैस लिमिटेड
-  - एस जी एल
-  Torrent Gas:
-  - टॉरेंट गैस
-  Tripura Natural Gas:
-  - त्रिपुर नैचुरल गैस
-  Unique Central Piped Gases Pvt Ltd (UCPGPL):
-  - यूनीक सेन्ट्रल पाईप्ड गेसेस प्राईवेट लिमिटेड
-  - यू सी पी जी पी एल
-  Vadodara Gas Limited:
-  - वड़ोदरा गैस लिमिटेड
+# pipe_gas_provider_name:
+#   Aavantika Gas Ltd.:
+#   - आवन्तिका गैस लिमिटेड
+#   Adani Total Gas Limited:
+#   - अडानी टोटाल गैस लिमिटेड
+#   - अडानी गैस
+#   - अडानी टोटाल
+#   - अडानी पाइप गैस
+#   Assam Gas Company Limited:
+#   - असाम गैस कम्पनी लिमिटेड
+#   - असाम गैस कंपनी
+#   - असाम गैस
+#   Bhagyanagar Gas Limited:
+#   - भाग्यानगर गैस लिमिटेड
+#   Central U.P. Gas Limited:
+#   - सेन्ट्रल यू पी गैस लिमिटेड
+#   Charotar Gas Sahakari Mandali Ltd:
+#   - चारोतार गैस सहाकारी मंडाली लिमिटेड
+#   GAIL Gas Limited:
+#   - गैल गैस लिमिटेड
+#   - गैल
+#   GAIL India Limited:
+#   - गैल इंदिया लिमिटेड
+#   - गैल इंदिया
+#   Green Gas Limited(GGL):
+#   - ग्रिन गैस लिमिटेड
+#   - ग्रिन गैस
+#   - जी जी एल
+#   Gujarat Gas Limited:
+#   - गुजरत गैस लिमिटेड
+#   Gujarat State Petronet Limited:
+#   - गुजरत स्टेटे पैट्रोनेट लिमिटेड
+#   Haryana City Gas - Kapil Chopra Enterprise:
+#   - हरयाणा सीटी गैस कापिल चोपड़ा एंटरप्राइज़
+#   - हरयाणा सीटी गैस
+#   - कापिल चोपड़ा एंटरप्राइज़
+#   IRM Energy Private Limited:
+#   - आई आर एम इनर्जी प्राईवेट लिमिटेड
+#   Indian Oil Corporation Ltd-Piped Gas:
+#   - इन्डियन आयल कॉरपोरेशन लिमिटेड पाईप्ड गैस
+#   - आइओसीएल
+#   - इन्डियन आयल
+#   Indian Oil-Adani Gas Private Limited:
+#   - इन्डियन आयल अडानी गैस प्राईवेट लिमिटेड
+#   Indraprastha Gas:
+#   - इन्द्रप्रस्थ गैस
+#   - आई जी एल
+#   - इन्द्रप्रस्थ गैस
+#   Mahanagar Gas Limited:
+#   - माहानगर गैस लिमिटेड
+#   - माहानगर गैस
+#   Maharashtra Natural Gas Limited (MNGL):
+#   - महाराष्ट्रा नैचुरल गैस लिमिटेड
+#   - एम एन जी एल
+#   - महाराष्ट्रा गैस लिमिटेड
+#   Megha Gas:
+#   - मेघ गैस
+#   Naveriya Gas Pvt Ltd:
+#   - नावेरिया गैस प्राईवेट लिमिटेड
+#   Purba Bharati Gas Pvt Ltd:
+#   - पूर्बा भरती गैस प्राईवेट लिमिटेड
+#   Rajasthan State Gas Limited:
+#   - राजास्थान स्टेटे गैस लिमिटेड
+#   Sabarmati Gas Limited (SGL):
+#   - सबरमती गैस लिमिटेड
+#   - एस जी एल
+#   Torrent Gas:
+#   - टॉरेंट गैस
+#   Tripura Natural Gas:
+#   - त्रिपुर नैचुरल गैस
+#   Unique Central Piped Gases Pvt Ltd (UCPGPL):
+#   - यूनीक सेन्ट्रल पाईप्ड गेसेस प्राईवेट लिमिटेड
+#   - यू सी पी जी पी एल
+#   Vadodara Gas Limited:
+#   - वड़ोदरा गैस लिमिटेड
 # state_name:
 #   Andaman and Nicobar:
 #   - अन्दमान एन्ड नीकोबार
